objects/MPW_Prime_Die__c.object
<CustomObject>
    <description>Prime Die MPW reservation by Customer</description>
    <fields>
        <fullName>ADDER_D1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ADDER_D1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDER_D2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ADDER_D2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDER_D3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ADDER_D3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Name__c</fullName>
        <formula>IF( Category__c = &apos;Customer&apos;,
MPW_Form__r.AM_Name__r.FirstName + &quot; &quot; + MPW_Form__r.AM_Name__r.LastName + &quot;(&quot; + MPW_Form__r.AM_Name__r.HCM_Login_ID__c + &quot;)&quot;,
&apos;&apos;
)</formula>
        <label>AM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>MPW_Form__r.Customer_Company_Name__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Remarks__c</fullName>
        <label>Additional Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address1_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address1 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address1 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_ShortLoop_Wafer__c</fullName>
        <label>Address1 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address2 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address2 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_ShortLoop_Wafer__c</fullName>
        <label>Address2 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address3 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address3 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_ShortLoop_Wafer__c</fullName>
        <label>Address3 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <label>Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <label>Answer 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <formula>MPW_Form__r.Approved_On__c</formula>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Process_ID__c</fullName>
        <formula>MPW_Form__r.Device__r.Assigned_Process_ID__r.Name</formula>
        <label>Assigned Process ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BARE_DIE_SHIP_DATE_FLAG__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>BARE_DIE_SHIP_DATE_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backgrind__c</fullName>
        <inlineHelpText>Backgrind is compulsory in MPWs for die sawing purpose.</inlineHelpText>
        <label>Backgrind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bare_Die_Ship_Date__c</fullName>
        <label>Bare Die Ship Date</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blocking_Mask_Revision__c</fullName>
        <label>Blocking Mask Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Name__c</fullName>
        <formula>IF(Category__c = &apos;Customer&apos;,
MPW_Form__r.CSR_Name__r.FirstName + &quot; &quot; + MPW_Form__r.CSR_Name__r.LastName + &quot;(&quot; + MPW_Form__r.CSR_Name__r.HCM_Login_ID__c + &quot;)&quot;,
&apos;&apos;)</formula>
        <label>CSR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Wafer__c</fullName>
        <label>Calculated Wafer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>MPW_Form__r.Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CornerSplitAttachedId__c</fullName>
        <label>CornerSplitAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CornerSplitAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CornerSplitAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corner_Split__c</fullName>
        <label>Corner Split(in 50 dies multiples)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>MPW_Form__r.Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tapeout_Date__c</fullName>
        <formula>MPW_Form__r.Customer_Tapeout_Date__c</formula>
        <label>Customer Tapeout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_Die_Form__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>In multiple of 50 dies</inlineHelpText>
        <label>Delivery Qty Die Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_Wafer_Form__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Delivery Qty Wafer Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Package_Accepted_Date__c</fullName>
        <description>Lookup the list of “PTRF” history event with all criteria below as True and populate the field with latest “Edit Date”
-	“Mask Set Title” field = MPW Prime Die “MPW Train”
-	If it change, need to write trigger on Mask Set Title object.
-	“Device” field contain MPW “Prime Die Name”
-	If it change, need to write trigger on Device object.
-	“Prime Tapeout” = True
-	History “Field / Event” = DRC DRW Status
-	“DRC DRW Status” = Completed</description>
        <label>Design Package Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Package_Deadline__c</fullName>
        <description>Reference to MPW Prime Die “MPW Reservation Form” and populate the deadline from the new field “Final design package completion deadline”</description>
        <formula>MPW_Form__r.Final_Design_Package_Completion_Deadline__c</formula>
        <label>Design Package Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_CRMDID__c</fullName>
        <formula>MPW_Form__r.Device__r.CRMDID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device CRMDID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_PTRF_ID__c</fullName>
        <formula>MPW_Form__r.Device__r.PTRF_ID__c</formula>
        <label>Device PTRF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_Die_Size_X_um__c</fullName>
        <inlineHelpText>Preshrink Die Size X in micron (um)</inlineHelpText>
        <label>Drawn Die Size X (um)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_Die_Size_Y_um__c</fullName>
        <inlineHelpText>Preshrink Die Size Y in micron (um)</inlineHelpText>
        <label>Drawn Die Size Y (um)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_Orientation_Restricted_Structures__c</fullName>
        <label>Drawn Orientation Restricted Structures</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Error_2__c</fullName>
        <label>ERP Error 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Error__c</fullName>
        <label>ERP Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Status_2__c</fullName>
        <label>ERP Status 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <label>ERP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTRA_WAFER_ID__c</fullName>
        <label>EXTRA_WAFER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_In_DIE_Form__c</fullName>
        <label>Expedite In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_In_WAFER_Form__c</fullName>
        <label>Expedite In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Die_B_Integration__c</fullName>
        <formula>IF( Extra_Die_B_Void__c &lt; 0, Extra_Die_B_Void__c, Extra_Die_B__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra Die B Integration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_B_Void__c</fullName>
        <label>Extra Die B Void</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_B__c</fullName>
        <label>Extra Die B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_Qty_Cumulative__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Will have cumulative value of extra die qty values from MPW Extra Die record.</description>
        <label>Extra Die Qty (Cumulative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_Qty__c</fullName>
        <inlineHelpText>In multiple of 50 dies</inlineHelpText>
        <label>Extra Die Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_Type__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Extra Die Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Wafer_Qty__c</fullName>
        <label>Extra Wafer Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAE_Name__c</fullName>
        <formula>IF(Category__c = &apos;Customer&apos;,
MPW_Form__r.FE_Name__r.FirstName + &quot; &quot; + MPW_Form__r.FE_Name__r.LastName + &quot;(&quot; + MPW_Form__r.FE_Name__r.HCM_Login_ID__c + &quot;)&quot;,
&apos;&apos;)</formula>
        <label>FAE Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Fast Fast Corner Split Die Qty</description>
        <inlineHelpText>Fast Fast Corner Split Die Qty</inlineHelpText>
        <label>FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Fast Slow Corner Split Qty</description>
        <inlineHelpText>Fast Slow Corner Split Qty</inlineHelpText>
        <label>FS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_ID__c</fullName>
        <formula>MPW_Form__r.MPW_Train_Name__r.Fab__c</formula>
        <label>Fab_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_GDS_PTRF_Submitted_Date__c</fullName>
        <description>Lookup the list of “PTRF” history event with all criteria below as True and populate the field with latest “Created Date”
-	“Mask Set Title” field = MPW Prime Die “MPW Train”
-	If it change, need to write trigger on Mask Set Title object.
-	“Device” field contain MPW “Prime Die Name”
-	If it change, need to write trigger on Device object.
-	“Prime Tapeout” = True
-	History “Field / Event” = DRC DRW Status
-	“DRC DRW Status” = Completed</description>
        <label>Final GDS + PTRF Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Metal_Stack__c</fullName>
        <label>Final Metal Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_PTSR_Submitted_Date__c</fullName>
        <description>Lookup the list of “Waiver Collaborator” with “Mask Set Title” field = MPW Prime Die “MPW Train” AND “CRM Device” contain MPW “Prime Die Name”. If count &gt; 0 populate the latest value of “Submitted Date” else leave this field as blank.</description>
        <label>Final PTSR Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Reservation_Change__c</fullName>
        <description>If total number of MPW Change Request Type “Drawn Die Size Change” under the MPW Prime Die &gt; 0, populate the latest “Requested On” date. Else leave this field as blank</description>
        <label>Final Reservation Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GMPL_Project_Name_Id__c</fullName>
        <label>GMPL Project Name Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMPL_Project_Name_Text__c</fullName>
        <label>GMPL Project Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMPL_Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GMPL Project Name</label>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipLabel>MPW Prime Dies</relationshipLabel>
        <relationshipName>MPW_Prime_Dies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GMPL_Purpose__c</fullName>
        <label>Purpose/Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>MPW_Form__r.Geometry_ID__c</formula>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Design_Package_Accepted_Date__c</fullName>
        <description>Lookup the list of “PTRF” history event with all criteria below as True and populate the field with first “Edit Date”
-	“Mask Set Title” field = MPW Prime Die “MPW Train”
-	If it change, need to write trigger on Mask Set Title object.
-	“Device” field contain MPW “Prime Die Name”
-	If it change, need to write trigger on Device object.
-	“Prime Tapeout” = True
-	History “Field / Event” = DRC DRW Status
-	“DRC DRW Status” = Completed</description>
        <label>Initial Design Package Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_GDS_PTRF_Submitted_Date__c</fullName>
        <description>Lookup the list of “PTRF” history event with all criteria below as True and populate the field with first “Created Date”
-	“Mask Set Title” field = MPW Prime Die “MPW Train”
-	If it change, need to write trigger on Mask Set Title object.
-	“Device” field contain MPW “Prime Die Name”
-	If it change, need to write trigger on Device object.
-	“Prime Tapeout” = True
-	History “Field / Event” = DRC DRW Status
-	“DRC DRW Status” = Completed</description>
        <label>Initial GDS + PTRF Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Form_Audit_Trials__c</fullName>
        <label>Legacy Form Audit Trials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW_External_ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPW_Form_Number__c</fullName>
        <formula>MPW_Form__r.Name</formula>
        <label>MPW Form Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Status__c</fullName>
        <formula>TEXT(MPW_Form__r.Form_Status__c)</formula>
        <label>MPW Form Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form__c</fullName>
        <label>MPW Form#</label>
        <referenceTo>MPW_Reservation__c</referenceTo>
        <relationshipLabel>MPW Prime Dies</relationshipLabel>
        <relationshipName>MPW_Prime_Dies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MPW_Share_ID__c</fullName>
        <label>MPW Share ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Train__c</fullName>
        <formula>MPW_Form__r.MPW_Train_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Train</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <label>Metal Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Instances__c</fullName>
        <label># of Instances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Wafers__c</fullName>
        <label># of Wafers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPTION_C1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OPTION_C1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPTION_C2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OPTION_C2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPTION_C3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OPTION_C3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORC_Review__c</fullName>
        <label>ORC Review</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSD_Date__c</fullName>
        <label>OSD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <defaultValue>&quot;MPW_Prime_Die__c&quot;</defaultValue>
        <label>ObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <inlineHelpText>To indicate the type of operation to be carried out at ERP end</inlineHelpText>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA_Code__c</fullName>
        <formula>MPW_Form__r.PA_Code__c</formula>
        <label>PA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>POR Qty. default to Delivery Die Qty</description>
        <inlineHelpText>POR Qty. default to Delivery Die Qty</inlineHelpText>
        <label>POR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Shrink_Die_Size_X__c</fullName>
        <label>Post Shrink Die Size X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Shrink_Die_Size_Y__c</fullName>
        <label>Post Shrink Die Size Y</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Name__c</fullName>
        <externalId>true</externalId>
        <label>Prime Die Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <formula>MPW_Form__r.Device__r.Assigned_Process_ID__r.Process_Owner__c</formula>
        <label>Process Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <formula>MPW_Form__r.Process_Type__r.Name</formula>
        <label>Process Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of MPW device</description>
        <label>Purpose</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>VALUE(Delivery_Qty_Die_Form__c) + ( VALUE( Delivery_Qty_Wafer_Form__c ) * 50 )</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <label>Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETICLE_SPACE_A_INTEGRATION__c</fullName>
        <formula>IF( RETICLE_SPACE_A_Void_c__c &lt; 0, RETICLE_SPACE_A_Void_c__c, RETICLE_SPACE_A__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RETICLE SPACE A INTEGRATION</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RETICLE_SPACE_A_Void_c__c</fullName>
        <label>RETICLE_SPACE_A_Void__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RETICLE_SPACE_A__c</fullName>
        <label>RETICLE_SPACE_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <formula>MPW_Form__r.Requestor_Name__c</formula>
        <label>Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Close_Date__c</fullName>
        <formula>DATEVALUE( MPW_Form__r.Reservation_Close_Date__c )</formula>
        <label>Reservation Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Slow Fast Corner Split Die Qty</description>
        <inlineHelpText>Slow Fast Corner Split Die Qty</inlineHelpText>
        <label>SF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Answer_10__c</fullName>
        <label>SRAM Answer 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Answer_1__c</fullName>
        <label>SRAM Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Answer_2__c</fullName>
        <label>SRAM Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Question_10__c</fullName>
        <label>SRAM Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Question_1__c</fullName>
        <label>SRAM Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRAM_Question_2__c</fullName>
        <label>SRAM Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Slow Slow Corner Split Qty</description>
        <inlineHelpText>Slow Slow Corner Split Qty</inlineHelpText>
        <label>SS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_SIZE_X__c</fullName>
        <formula>VALUE (Drawn_Die_Size_X_um__c)  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STD_SIZE_X</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STD_SIZE_Y__c</fullName>
        <formula>VALUE( Drawn_Die_Size_Y_um__c )  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STD_SIZE_Y</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <formula>MPW_Form__r.Sales_Order__c</formula>
        <label>Sales Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>MPW_Form__r.Address__c</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Company_Name__c</fullName>
        <formula>MPW_Form__r.Company_Name__c</formula>
        <label>Shipping Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Person__c</fullName>
        <formula>MPW_Form__r.Contact_Person__c</formula>
        <label>Shipping Contact Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Fax__c</fullName>
        <formula>NULL</formula>
        <label>Shipping Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <formula>MPW_Form__r.Phone__c</formula>
        <label>Shipping Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <formula>MPW_Form__r.Postal_Code__c</formula>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortLoop_Wafer__c</fullName>
        <label>ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splitmaster_FE__c</fullName>
        <formula>IF(MPW_Form__r.Category__c = &apos;Customer&apos;,FAE_Name__c,Requestor_Name__c)</formula>
        <label>Splitmaster FE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splitmaster_Process_Owner__c</fullName>
        <label>Splitmaster Process Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDevicesExtractionAttachedId__c</fullName>
        <label>SubDevicesExtractionAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDevicesExtractionAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubDevicesExtractionAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>MPW_Form__r.Sub_Category__c</formula>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Devices_Extraction__c</fullName>
        <label>Sub Devices Extraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <formula>MPW_Form__r.Supervisor_Name__c</formula>
        <label>Supervisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapeout_Readiness_Validation_Status__c</fullName>
        <formula>TEXT(MPW_Form__r.Device__r.Pre_PTRF_Validation_Status__c)</formula>
        <label>Tapeout Readiness Validation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnkeyAttachedId__c</fullName>
        <label>TurnkeyAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnkeyAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TurnkeyAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnkey_OSAT_address__c</fullName>
        <label>Turnkey OSAT address</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turnkey_Service__c</fullName>
        <label>Turnkey Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <formula>MPW_Form__r.Usage__c</formula>
        <label>Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_FF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_FS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer FS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_Form_Delivery__c</fullName>
        <formula>IF(VALUE( Delivery_Qty_Die_Form__c) = 0,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Wafer Form Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_POR__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer POR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_SF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer SF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_SS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer SS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafers_Quantity__c</fullName>
        <formula>Quantity__c /50</formula>
        <label>Wafers Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isExtraDieRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExtraDieRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVoided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVoided</label>
        <type>Checkbox</type>
    </fields>
    <label>MPW Prime Die</label>
    <listViews>
        <fullName>Turnkey_PrimeDie</fullName>
        <columns>MPW_Form__c</columns>
        <columns>NAME</columns>
        <columns>Turnkey_Service__c</columns>
        <columns>TurnkeyAttached__c</columns>
        <columns>TurnkeyAttachedId__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Turnkey_Service__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Turnkey PrimeDie</label>
        <language>en_US</language>
    </listViews>
</CustomObject>